2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.[ch], gw/wtp.c: Renamed timer_* to gwtimer_* to
	avoid name conflict with system functions.  Sigh.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: Reformatted according to new layout standard.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.c: Implement the heap structure using a C array,
	instead of using List.  This has less overhead and removes the
	need for list_swap.

	* gw/list.[ch]: Remove list_swap.

2000-09-20  Richard Braakman  <dark@wapit.com>

	* gw/timers.[ch]: Removed timersets from the interface.  The choice
	of what timers should be handled by a single thread is a performance
	issue, not an interface issue.  All timers are now handled by a
	single timer thread.  The choice of output list is now specified
	per timer, instead of per timer set.
	Added timer_init and timer_shutdown functions that should be
	called before creating any timers.

	* gw/wapbox.c, gw/wtp.c: Adjust to new timers interface.

2000-09-19  Richard Braakman  <dark@wapit.com>

	* gw/timers.c, gw/timers.h: New timers.  Faster, better, and
	they actually time out.

	* gw/wtp_timer.c, gw/wtp_timer.h: Removed.  (Remnants of old
	timer code).

	* gw/wapbox.c: Removed references to old timer code.  It's now
	completely hidden in the wtp layer.  Other layers can get their
	own timers.

	* gw/wtp.c: Use new timers.  Added some convenience functions
	(start_timer_A and start_timer_R).  Handle TimerTO_* events.
	There's no start_timer_W yet because we don't use it yet.

	* gw/wtp.h: Use new timers.

	* gw/wap-events-def.h: TimerTO_* events get a machine handle
	instead of a dummy field, so that the WTP layer knows which
	machine timed out.

	* gw/wtp_state-decl.h: Use new timers, by calling the
	convenience functions.  There's no real timer code left in
	the state machines.

	* gw/list.c, gw/list.h: Made list_delete_matching and
	list_delete_equal return the count of items deleted.